fix overflow

--- a/public/global.css
+++ b/public/global.css
@@ -4,6 +4,7 @@ html, body {
 	height: 100%;
 	font-family: 'Roboto', sans-serif;
 	color: #DCD5CC;
+	overflow: hidden;
 }
 
 body {
